--- a/web-checklist/package.json
+++ b/web-checklist/package.json
@@ -4,8 +4,6 @@
   "private": true,
   "dependencies": {
     "firebase": "^4.13.1",
-    "gulp": "^3.9.1",
-    "gulp-sass": "^4.0.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router": "^4.2.0",
@@ -19,6 +17,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "gulp-autoprefixer": "^5.0.0"
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-sass": "^4.0.1"
   }
 }
