made it responsive for the most part, still have some tweaks to make to the layout and components

--- a/web-checklist/package.json
+++ b/web-checklist/package.json
@@ -20,5 +20,6 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-sass": "^4.0.1"
-  }
+  },
+  "homepage": "https://website-checklist.firebaseapp.com/"
 }
